--- a/public/pages/menu.html
+++ b/public/pages/menu.html
@@ -23,9 +23,9 @@
       <!-- hero-banner -->
       <div class="hero-slider">
         <div class="hero-slider__wrapper" id="hero-wrapper">
-          <img src="../../src/assets/images/hero-banner-3.png" alt="Banner 1" class="hero-slider__slide" />
-          <img src="../../src/assets/images/hero-banner-2.jpg" alt="Banner 2" class="hero-slider__slide" />
-          <img src="../../src/assets/images/hero-banner-2.jpg" alt="Banner 3" class="hero-slider__slide" />
+          <img src="/src/assets/images/hero-banner-3.png" alt="Banner 1" class="hero-slider__slide" />
+          <img src="/src/assets/images/hero-banner-2.jpg" alt="Banner 2" class="hero-slider__slide" />
+          <img src="/src/assets/images/hero-banner-2.jpg" alt="Banner 3" class="hero-slider__slide" />
         </div>
         <button class="slider-arrow slider-arrow--prev" id="hero-prev">
           ❮
@@ -41,31 +41,31 @@
         <div class="category-slider__viewport">
           <div class="category-slider__wrapper" id="slider-wrapper">
             <a href="#" class="category-card">
-              <img src="../../src/assets/images/Lau-viet.jpg" alt="Lẩu" />
+              <img src="/src/assets/images/Lau-viet.jpg" alt="Lẩu" />
               <span>Lẩu Việt</span>
             </a>
             <a href="#" class="category-card">
-              <img src="../../src/assets/images/Lau-thai.jpg" alt="Lẩu Thái" />
+              <img src="/src/assets/images/Lau-thai.jpg" alt="Lẩu Thái" />
               <span>Lẩu Thái</span>
             </a>
             <a href="#" class="category-card">
-              <img src="../../src/assets/images/Lau-trung.jpg" alt="Món Nhật" />
+              <img src="/src/assets/images/Lau-trung.jpg" alt="Món Nhật" />
               <span>Lẩu Trung</span>
             </a>
             <a href="#" class="category-card">
-              <img src="../../src/assets/images/mon_han.webp" alt="Món Hàn" />
+              <img src="/src/assets/images/mon_han.webp" alt="Món Hàn" />
               <span>Lẩu Hàn</span>
             </a>
             <a href="#" class="category-card">
-              <img src="../../src/assets/images/sushi.webp" alt="Sushi" />
+              <img src="/src/assets/images/sushi.webp" alt="Sushi" />
               <span>Shushi</span>
             </a>
             <a href="#" class="category-card">
-              <img src="../../src/assets/images/com.webp" alt="Cơm" />
+              <img src="/src/assets/images/com.webp" alt="Cơm" />
               <span>Cơm</span>
             </a>
             <a href="#" class="category-card">
-              <img src="../../src/assets/images/bento.webp" alt="Bento" />
+              <img src="/src/assets/images/bento.webp" alt="Bento" />
               <span>Bento</span>
             </a>
           </div>
@@ -82,7 +82,7 @@
 
         <div class="product-grid">
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-bo.jpg" alt="Lẩu bò" class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-bo.jpg" alt="Lẩu bò" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu bò Tây Bắc</h3>
               <p class="product-card__price">Giá: 200.000 đ</p>
@@ -93,8 +93,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ca-duoi.jpg" alt="Rau xào ngũ sắc"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ca-duoi.jpg" alt="Rau xào ngũ sắc" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu cá đuối</h3>
               <p class="product-card__price">Giá: 180.000 đ</p>
@@ -105,7 +104,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ca-hoi.jpg" alt="Bánh lava phô mai nướng"
+            <img src="/src/assets/images/Lau-vn/Lau-ca-hoi.jpg" alt="Bánh lava phô mai nướng"
               class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu cá hồi</h3>
@@ -117,7 +116,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ca-hu.jpg" alt="Lẩu cá hú" class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ca-hu.jpg" alt="Lẩu cá hú" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu cá hú</h3>
               <p class="product-card__price">Giá: 699.000 đ</p>
@@ -128,7 +127,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ca-keo-rau-dang.jpg" alt="Lẩu cá kèo rau đắng"
+            <img src="/src/assets/images/Lau-vn/Lau-ca-keo-rau-dang.jpg" alt="Lẩu cá kèo rau đắng"
               class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu cá kèo rau đắng</h3>
@@ -140,7 +139,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-chao-chim-bo-cau.jpeg" alt="Lẩu cháo chim bồ câu"
+            <img src="/src/assets/images/Lau-vn/Lau-chao-chim-bo-cau.jpeg" alt="Lẩu cháo chim bồ câu"
               class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu cháo chim bồ câu</h3>
@@ -152,7 +151,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-de.jpg" alt="Lẩu dê Tây Nguyên" class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-de.jpg" alt="Lẩu dê Tây Nguyên" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu dê Tây Nguyên</h3>
               <p class="product-card__price">Giá: 340.000 đ</p>
@@ -161,8 +160,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
@@ -171,8 +169,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
@@ -181,8 +178,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
@@ -191,8 +187,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
@@ -201,8 +196,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
@@ -211,8 +205,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
@@ -221,8 +214,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
@@ -231,8 +223,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
@@ -241,8 +232,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
@@ -251,8 +241,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
@@ -261,8 +250,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
@@ -271,8 +259,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
@@ -281,8 +268,7 @@
           </div>
 
           <div class="product-card">
-            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
-              class="product-card__image" />
+            <img src="/src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu" class="product-card__image" />
             <div class="product-card__content">
               <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
               <p class="product-card__price">Giá: 140.000 đ</p>
