--- a/public/pages/reservation/success.html
+++ b/public/pages/reservation/success.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../src/css/style.css">
-    <link rel="stylesheet" href="../../src/css/confirmation.css">
+    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/src/css/confirmation.css">
 </head>
 <body>
     <div id="main">
@@ -22,6 +22,6 @@
         </main>
         <footer id="footer"></footer>
     </div>
-    <script src="../../src/js/loader.js"></script>
+    <script src="/src/js/loader.js"></script>
 </body>
 </html>
