--- a/public/pages/checkout/cart.html
+++ b/public/pages/checkout/cart.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <link rel="stylesheet" href="/src/css/style.css">
-    <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" href="/src/css/cart.css">
 </head>
 
 <body>
@@ -101,7 +101,7 @@
 
     <script src="/src/js/loader.js"></script>
     <script src="/src/js/data.js"></script>
-    <script src="cart.js"></script>
+    <script src="/src/js/cart.js"></script>
 </body>
 
 </html>
