--- a/public/pages/checkout/order.html
+++ b/public/pages/checkout/order.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <link rel="stylesheet" href="/src/css/style.css">
-    <link rel="stylesheet" href="order.css">
+    <link rel="stylesheet" href="/src/css/order.css">
 </head>
 <body>
     <div id="main">
@@ -272,6 +272,6 @@
 
     <script src="/src/js/loader.js"></script>
     <script src="/src/js/data.js"></script>
-    <script src="order.js"></script>
+    <script src="/src/js/order.js"></script>
 </body>
 </html>
