--- a/public/pages/checkout/payment_fail.html
+++ b/public/pages/checkout/payment_fail.html
@@ -11,7 +11,6 @@
     
     <link rel="stylesheet" href="/src/css/style.css">
     <style>
-    <style>
         .page-content {
             min-height: 70vh;
             display: flex;
@@ -158,7 +157,7 @@
                     <p class="fail-message">Rất tiếc, giao dịch của bạn không thành công</p>
                     <p class="transaction-id">Mã giao dịch: <strong>#65857127</strong></p>
                     <div class="fail-buttons">
-                        <a href="/payment/payment.html" class="fail-btn btn-retry">
+                        <a href="/public/pages/checkout/payment.html" class="fail-btn btn-retry">
                             <i class="fa-solid fa-rotate-right"></i>
                             Thanh Toán Lại
                         </a>
