--- a/public/pages/detail.html
+++ b/public/pages/detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cobb Salad - Product Detail</title>
-    <link rel="stylesheet" href="detail.css">
+    <link rel="stylesheet" href="/src/css/detail.css">
 </head>
 <body>
     <div class="page">
