--- a/public/pages/reservation/confirmation.html
+++ b/public/pages/reservation/confirmation.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <link rel="stylesheet" href="../../src/css/style.css">
-    <link rel="stylesheet" href="../../src/css/confirmation.css">
+    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/src/css/confirmation.css">
 </head>
 <body>
     <div id="main">
@@ -31,14 +31,14 @@
                     <div class="summary-item"><span class="summary-item__label">Ghi chú:</span><span id="summary-notes" class="summary-item__value"></span></div>
                 </div>
                 <div class="confirmation-actions">
-                    <a href="reserve.html" class="action-button action-button--back">Quay Lại Sửa</a>
-                    <a href="success.html" id="confirmButton" class="action-button action-button--confirm">Xác Nhận Đặt Bàn</a>
+                    <a href="/public/pages/reservation/reserve.html" class="action-button action-button--back">Quay Lại Sửa</a>
+                    <a href="/public/pages/reservation/success.html" id="confirmButton" class="action-button action-button--confirm">Xác Nhận Đặt Bàn</a>
                 </div>
             </div>
         </main>
         <footer id="footer"></footer>
     </div>
-    <script src="../../src/js/loader.js"></script>
-    <script src="../../src/js/confirmation-logic.js"></script>
+    <script src="/src/js/loader.js"></script>
+    <script src="/src/js/confirmation-logic.js"></script>
 </body>
 </html>
