--- a/public/pages/reservation/reserve.html
+++ b/public/pages/reservation/reserve.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://npmcdn.com/flatpickr/dist/flatpickr.min.js"></script>
     <script src="https://npmcdn.com/flatpickr/dist/l10n/vn.js"></script>
-    <link rel="stylesheet" href="../../src/css/style.css">
-    <link rel="stylesheet" href="../../src/css/reserve.css"> 
+    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/src/css/reserve.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -55,8 +55,8 @@
         </main>
         <footer id="footer"></footer>
     </div>
-    <script src="../../src/js/loader.js"></script>
-    <script src="../../src/js/data.js"></script>
-    <script src="../../src/js/reserve-logic.js"></script>
+    <script src="/src/js/loader.js"></script>
+    <script src="/src/js/data.js"></script>
+    <script src="/src/js/reserve-logic.js"></script>
 </body>
 </html>
