--- a/public/pages/stores.html
+++ b/public/pages/stores.html
@@ -11,8 +11,8 @@
     <!-- ADD LEAFLET LIB-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-    <link rel="stylesheet" href="../../src/css/style.css">
-    <link rel="stylesheet" href="../../src/css/stores.css">
+    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/src/css/stores.css">
 </head>
 <body>
     <div id="main">
@@ -37,12 +37,12 @@
         <footer id="footer"></footer>
     </div>
     
-    <script src="../../src/js/loader.js"></script>
+    <script src="/src/js/loader.js"></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
     <!-- 1. Tải dữ liệu các cửa hàng trước -->
-    <script src="../../src/js/data.js"></script>
+    <script src="/src/js/data.js"></script>
     <!-- 2. Sau đó mới chạy logic của trang stores -->
-    <script src="../../src/js/stores-logic.js"></script>
+    <script src="/src/js/stores-logic.js"></script>
 </body>
 </html>
