--- a/public/pages/checkout/cart.html
+++ b/public/pages/checkout/cart.html
@@ -9,26 +9,30 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" href="/src/assets/images/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
     <link rel="stylesheet" href="/src/css/style.css">
     <link rel="stylesheet" href="/src/css/cart.css">
 </head>
 
 <body>
     <div id="main">
+        <!-- Header sẽ được load động từ header.html -->
         <div id="header"></div>
         
+        <!-- Nội dung chính của trang giỏ hàng -->
         <div class="page-content">
             <div class="container">
                 <div class="cart-page">
+                    <!-- Tiêu đề giỏ hàng -->
                     <div class="cart-header">
                         <h1 class="cart-title">Giỏ hàng của bạn</h1>
                         <p class="cart-subtitle">Xem lại món ăn trước khi đặt hàng</p>
                     </div>
 
+                    <!-- Layout chính của giỏ hàng: danh sách món và tổng đơn hàng -->
                     <div class="cart-layout">
-                        <!-- Cart Items Section -->
+                        <!-- Phần danh sách món ăn trong giỏ hàng -->
                         <div class="cart-items-section">
+                            <!-- Header hiển thị số lượng món và nút xóa tất cả -->
                             <div class="cart-items-header">
                                 <span class="items-count" id="itemsCount">3 món</span>
                                 <button class="clear-cart-btn" id="clearCartBtn">
@@ -37,11 +41,12 @@
                                 </button>
                             </div>
 
+                            <!-- Danh sách các món ăn trong giỏ hàng (được tạo động bởi JavaScript) -->
                             <div class="cart-items-list" id="cartItemsList">
-                                <!-- Cart items will be dynamically added here -->
+                                <!-- Các món ăn sẽ được thêm động vào đây -->
                             </div>
 
-                            <!-- Empty Cart State -->
+                            <!-- Trạng thái khi giỏ hàng trống -->
                             <div class="empty-cart" style="display: none;">
                                 <i class="fa-solid fa-cart-shopping"></i>
                                 <h3>Giỏ hàng trống</h3>
@@ -50,10 +55,11 @@
                             </div>
                         </div>
 
-                        <!-- Cart Summary Section -->
+                        <!-- Phần tóm tắt đơn hàng và thanh toán -->
                         <div class="cart-summary">
                             <h2 class="summary-title">Tổng đơn hàng</h2>
                             
+                            <!-- Chi tiết tính toán giá -->
                             <div class="summary-details">
                                 <div class="summary-row">
                                     <span>Tạm tính</span>
@@ -74,16 +80,19 @@
                                 </div>
                             </div>
 
+                            <!-- Phần nhập mã giảm giá -->
                             <div class="promo-code">
                                 <input type="text" placeholder="Mã giảm giá" class="promo-input" id="promoInput">
                                 <button class="promo-btn" id="applyPromoBtn">Áp dụng</button>
                             </div>
 
+                            <!-- Nút tiến hành đặt hàng -->
                             <button class="checkout-btn" id="checkoutBtn">
                                 <i class="fa-solid fa-arrow-right"></i>
                                 Tiến hành đặt hàng
                             </button>
 
+                            <!-- Link quay lại trang menu để mua thêm -->
                             <div class="continue-shopping">
                                 <a href="/public/pages/menu.html">
                                     <i class="fa-solid fa-arrow-left"></i>
@@ -96,9 +105,11 @@
             </div>
         </div>
 
+        <!-- Footer sẽ được load động từ footer.html -->
         <div id="footer"></div>
     </div>
 
+    <!-- JavaScript files -->
     <script src="/src/js/loader.js"></script>
     <script src="/src/js/data.js"></script>
     <script src="/src/js/cart.js"></script>
