--- a/public/pages/menu.html
+++ b/public/pages/menu.html
@@ -32,7 +32,7 @@
               class="hero-slider__slide"
             />
             <img
-              src="../../src/assets/images/hero-banner-2.jpg"
+              src="../../src/assets/images/hero-banner-2.png"
               alt="Banner 2"
               class="hero-slider__slide"
             />
