Cap nhat code - Xoa di phan du thua

--- a/public/pages/deals.html
+++ b/public/pages/deals.html
@@ -17,36 +17,29 @@
       <div id="header"></div>
 
         <div id="content" class="page-content">
-            <!-- Promotion Section - 2 columns layout -->
+            <!-- Promotion Section -->
             <section class="promotion-section section">
                 <div class="container promotion-section__inner">
                     <div class="promotion-grid">
-                        <!-- Left Column -->
                         <div class="promo-left-column">
-                            <!-- Voucher Image 1: 50k -->
                             <div class="promo-image-top">
                                 <img src="/src/assets/images/voucher-50k.png" alt="Voucher giảm 50.000 VNĐ" class="promo-img">
                             </div>
 
-                            <!-- Voucher Image 2: 100k -->
                             <div class="promo-image-top">
                                 <img src="/src/assets/images/voucher-100k.png" alt="Voucher giảm 100.000 VNĐ" class="promo-img">
                             </div>
 
-                            <!-- Voucher Image 3: 200k -->
                             <div class="promo-image-bottom">
                                 <img src="/src/assets/images/voucher-200k.png" alt="Voucher giảm 200.000 VNĐ" class="promo-img">
                             </div>
 
-                            <!-- Voucher Image 4: Drink -->
                             <div class="promo-image-bottom">
                                 <img src="/src/assets/images/drink-voucher.png" alt="Voucher đồ uống miễn phí" class="promo-img">
                             </div>
                         </div>
 
-                        <!-- Right Column -->
                         <div class="promo-right-column">
-                            <!-- Voucher Card 1: 50k -->
                             <article class="voucher-card">
                                 <div class="voucher-card__header">
                                     <h3 class="voucher-card__title">COUPON 50.000 VNĐ</h3>
@@ -66,7 +59,6 @@
                                 </div>
                             </article>
 
-                            <!-- Voucher Card 2: 100k -->
                             <article class="voucher-card">
                                 <div class="voucher-card__header">
                                     <h3 class="voucher-card__title">COUPON 100.000 VNĐ</h3>
@@ -86,7 +78,6 @@
                                 </div>
                             </article>
 
-                            <!-- Voucher Card 3: 200k -->
                             <article class="voucher-card">
                                 <div class="voucher-card__header">
                                     <h3 class="voucher-card__title">COUPON 200.000 VNĐ</h3>
@@ -106,7 +97,6 @@
                                 </div>
                             </article>
 
-                            <!-- Voucher Card 4: Drink -->
                             <article class="voucher-card">
                                 <div class="voucher-card__header">
                                     <h3 class="voucher-card__title">VOUCHER NƯỚC UỐNG</h3>
