--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -18,31 +18,27 @@
         <div id="header"></div>
 
         <div id="content" class="page-content">
-            <!-- 1. About Us Hero section - 2 columns (7/12 + 5/12) -->
+            <!-- 1. About Us Hero section-->
             <section class="about-hero section">
                 <div class="container about-hero__inner">
                     <div class="about-hero__grid">
-                        <!-- Left column (7/12): Single image block -->
                         <div class="hero-image-block">
-                            <!-- Top: 1 large image -->
                             <div class="hero-image-block__main">
                                 <img src="/src/assets/images/hero-image-1.jpg" alt="Delicious food presentation" class="hero-image-block__img hero-image-block__img--large">
                             </div>
                             
-                            <!-- Bottom: 2 smaller images side by side -->
                             <div class="hero-image-block__thumbs">
                                 <img src="/src/assets/images/hero-image-2.jpg" alt="Fresh ingredients" class="hero-image-block__img hero-image-block__img--small">
                                 <img src="/src/assets/images/hero-image-3.jpg" alt="Cozy restaurant atmosphere" class="hero-image-block__img hero-image-block__img--small">
                             </div>
                         </div>
 
-                        <!-- Right column (5/12): Text content -->
                         <div class="about-hero__content">
                             <p class="about-hero__kicker">Về chúng tôi</p>
                             <h1 class="about-hero__title">Thức ăn là một phần quan trọng của một chế độ ăn cân bằng</h1>
                             <p class="about-hero__text">Chúng tôi tin rằng thức ăn không chỉ là dinh dưỡng mà còn là trải nghiệm. Từ việc chọn nguyên liệu tươi ngon đến cách chế biến tinh tế, mọi món ăn đều được tạo nên với tình yêu và sự cống hiến. Hãy cùng chúng tôi khám phá hành trình ẩm thực đầy cảm hứng.</p>
 
-                            <!-- Watch video link with circular play icon -->
+                            <!-- Xem thêm video (play icon) -->
                             <a href="#" class="about-hero__video" aria-label="Watch video">
                                 <span class="about-hero__play-icon">
                                     <span class="about-hero__play-triangle"></span>
@@ -50,32 +46,29 @@
                                 <span class="about-hero__video-text">Xem video</span>
                             </a>
 
-                            <!-- Show more button -->
+                            <!-- Xem thêm -->
                             <a href="#" class="btn btn--primary about-hero__btn">Xem thêm</a>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <!-- 2. Why Choose Us section - stacked vertical layout -->
+            <!-- 2. Why Choose Us section-->
             <section class="why-choose-us section">
                 <div class="container why-choose-us__inner">
-                    <!-- Part 1: Centered header -->
                     <header class="why-choose-us__header">
                         <h2 class="why-choose-us__title">Tại sao chọn chúng tôi</h2>
                         <p class="why-choose-us__desc">Chúng tôi cam kết mang đến trải nghiệm ẩm thực đỉnh cao với đội ngũ đầu bếp chuyên nghiệp, nguyên liệu tươi sạch mỗi ngày và không gian ăn uống luôn sạch sẽ, an toàn.</p>
                     </header>
 
-                    <!-- Part 2: Large centered image (10/12 cols) -->
                     <div class="why-choose-us__media">
                         <img src="/src/assets/images/why-choose-us.jpg" alt="Our restaurant showcase" class="why-choose-us__image">
                     </div>
 
-                    <!-- Part 3: 3-column grid (each 4/12 cols) -->
                     <div class="why-choose-us__grid">
                         <article class="why-choose-us__item">
                             <div class="why-choose-us__icon" aria-hidden="true">
-                                <!-- chef hat icon -->
+                                <!-- icon mũ đầu bếp-->
                                 <svg width="48" height="48" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M32 12c-3.3 0-6 2.7-6 6v2h-2c-3.3 0-6 2.7-6 6v4c0 3.3 2.7 6 6 6h2v8c0 2.2 1.8 4 4 4h8c2.2 0 4-1.8 4-4v-8h2c3.3 0 6-2.7 6-6v-4c0-3.3-2.7-6-6-6h-2v-2c0-3.3-2.7-6-6-6zm0 4c1.1 0 2 .9 2 2v2h-4v-2c0-1.1.9-2 2-2zm-8 8h16c1.1 0 2 .9 2 2v4c0 1.1-.9 2-2 2H24c-1.1 0-2-.9-2-2v-4c0-1.1.9-2 2-2z" fill="currentColor"/>
                                 </svg>
@@ -86,7 +79,7 @@
 
                         <article class="why-choose-us__item">
                             <div class="why-choose-us__icon" aria-hidden="true">
-                                <!-- steaming bowl/cup icon -->
+                                <!-- icon nguyên liệu tươi ngon -->
                                 <svg width="48" height="48" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M20 12v4h24v-4H20zm-4 8c-2.2 0-4 1.8-4 4v12c0 6.6 5.4 12 12 12h16c6.6 0 12-5.4 12-12V24c0-2.2-1.8-4-4-4H16zm0 4h32v12c0 4.4-3.6 8-8 8H24c-4.4 0-8-3.6-8-8V24z" fill="currentColor"/>
                                     <path d="M24 8c0-1.1.9-2 2-2s2 .9 2 2v2h-4V8zm6 0c0-1.1.9-2 2-2s2 .9 2 2v2h-4V8zm6 0c0-1.1.9-2 2-2s2 .9 2 2v2h-4V8z" fill="currentColor"/>
@@ -98,7 +91,7 @@
 
                         <article class="why-choose-us__item">
                             <div class="why-choose-us__icon" aria-hidden="true">
-                                <!-- sparkles/clean icon -->
+                                <!-- icon (tượng trưng) môi trường sạch sẽ -->
                                 <svg width="48" height="48" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M32 8l4 12h12l-10 8 4 12-10-8-10 8 4-12-10-8h12z" fill="currentColor"/>
                                     <circle cx="16" cy="20" r="3" fill="currentColor"/>
@@ -114,16 +107,15 @@
                 </div>
             </section>
 
-            <!-- 3. Team Members section - full-width with background image and red overlay -->
+            <!-- 3. Team Members section -->
             <section class="team-members section">
                 <div class="container team-members__inner">
-                    <!-- Part 1: Centered header (white text) -->
                     <header class="team-members__header">
                         <h2 class="team-members__title">Đội ngũ đầu bếp</h2>
                         <p class="team-members__desc">Đội ngũ của chúng tôi gồm những người đam mê ẩm thực, tận tâm phục vụ và luôn sáng tạo để mang đến trải nghiệm tuyệt vời nhất cho quý khách.</p>
                     </header>
 
-                    <!-- Part 2: 5-member staggered grid (2 rows: top 3, bottom 2) -->
+                    <!-- 5-member staggered grid  -->
                     <div class="team-members__grid" role="list">
                         <!-- Team Card 1 -->
                         <article class="team-card" role="listitem" style="background-image: url('/src/assets/images/dish-bg-1.jpg');">
@@ -173,7 +165,7 @@
                 </div>
             </section>
 
-            <!-- 4. Testimonials section - centered carousel/slider -->
+            <!-- 4. Testimonials section-->
             <section class="testimonials section">
                 <div class="container testimonials__inner">
                     <header class="testimonials__header">
@@ -181,7 +173,7 @@
                         <h2 class="testimonials__title">Khách hàng nói gì về chúng tôi?</h2>
                     </header>
 
-                    <!-- [Why] Container rỗng để JS render động. [Risk] Xóa nhầm → JS không tìm thấy selector. -->
+                    <!-- Container rỗng để JS render động -->
                     <div class="testimonials__slider" aria-roledescription="carousel"></div>
                 </div>
             </section>
