--- a/public/pages/checkout/payment_success.html
+++ b/public/pages/checkout/payment_success.html
@@ -10,172 +10,7 @@
     <link rel="icon" type="image/png" href="/src/assets/images/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/src/css/style.css">
-    <style>
-        .page-content {
-            min-height: 70vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 60px 0;
-        }
-
-        .success-container {
-            max-width: 700px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 24px;
-            padding: 60px 40px;
-            text-align: center;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .success-icon {
-            width: 150px;
-            height: 150px;
-            margin: 0 auto 30px;
-            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            animation: scaleIn 0.5s ease-out;
-            box-shadow: 0 10px 40px rgba(34, 197, 94, 0.3);
-        }
-
-        .success-icon i {
-            font-size: 80px;
-            color: white;
-        }
-
-        @keyframes scaleIn {
-            from {
-                transform: scale(0);
-                opacity: 0;
-            }
-            to {
-                transform: scale(1);
-                opacity: 1;
-            }
-        }
-
-        .success-title {
-            font-size: 2.5rem;
-            color: #22c55e;
-            margin-bottom: 20px;
-            font-weight: 700;
-        }
-
-        .success-message {
-            font-size: 1.1rem;
-            color: #6b7280;
-            margin-bottom: 15px;
-        }
-
-        .order-id {
-            font-size: 1rem;
-            color: #9ca3af;
-            margin-bottom: 40px;
-        }
-
-        .order-id strong {
-            color: #1f2937;
-            font-weight: 600;
-        }
-
-        .success-buttons {
-            display: flex;
-            gap: 20px;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-
-        .success-btn {
-            padding: 16px 32px;
-            border-radius: 12px;
-            font-size: 1rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            border: none;
-            display: inline-flex;
-            align-items: center;
-            gap: 10px;
-            text-decoration: none;
-        }
-
-        .btn-primary {
-            background: linear-gradient(90deg, #d31027, #ea384d);
-            color: white;
-            box-shadow: 0 4px 15px rgba(211, 16, 39, 0.3);
-        }
-
-        .btn-primary:hover {
-            background: linear-gradient(90deg, #b91c1c, #dc2626);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(211, 16, 39, 0.4);
-        }
-
-        .btn-secondary {
-            background: white;
-            color: #1f2937;
-            border: 2px solid #e5e7eb;
-        }
-
-        .btn-secondary:hover {
-            background: #f9fafb;
-            border-color: var(--primary-color);
-            color: var(--primary-color);
-            transform: translateY(-2px);
-        }
-
-        /* Confetti Animation */
-        .confetti {
-            position: fixed;
-            width: 10px;
-            height: 10px;
-            position: absolute;
-            animation: confetti-fall 3s linear infinite;
-        }
-
-        @keyframes confetti-fall {
-            to {
-                transform: translateY(100vh) rotate(360deg);
-                opacity: 0;
-            }
-        }
-
-        .confetti:nth-child(1) { left: 10%; background: #ff6b6b; animation-delay: 0s; }
-        .confetti:nth-child(2) { left: 20%; background: #4ecdc4; animation-delay: 0.2s; }
-        .confetti:nth-child(3) { left: 30%; background: #ffe66d; animation-delay: 0.4s; }
-        .confetti:nth-child(4) { left: 40%; background: #a8e6cf; animation-delay: 0.6s; }
-        .confetti:nth-child(5) { left: 50%; background: #ff6b9d; animation-delay: 0.8s; }
-        .confetti:nth-child(6) { left: 60%; background: #c44569; animation-delay: 1s; }
-        .confetti:nth-child(7) { left: 70%; background: #f8b500; animation-delay: 1.2s; }
-        .confetti:nth-child(8) { left: 80%; background: #3ae374; animation-delay: 1.4s; }
-        .confetti:nth-child(9) { left: 90%; background: #778beb; animation-delay: 1.6s; }
-        .confetti:nth-child(10) { left: 15%; background: #e77f67; animation-delay: 0.3s; }
-
-        @media (max-width: 768px) {
-            .success-container {
-                padding: 40px 30px;
-            }
-
-            .success-title {
-                font-size: 2rem;
-            }
-
-            .success-buttons {
-                flex-direction: column;
-            }
-
-            .success-btn {
-                width: 100%;
-                justify-content: center;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/src/css/payment_success.css">
 </head>
 <body>
     <div id="main">
